--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -12,6 +12,9 @@
             android:id="@+id/nav_profile"
             android:title="Profile" />
         <item
+            android:id="@+id/nav_applied_jobs"
+            android:title="My Applications" />
+        <item
             android:id="@+id/nav_donation_history"
             android:title="Donations History" />
            <item
