--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -142,7 +142,7 @@
                 android:id="@+id/icon_about"
                 android:layout_width="24dp"
                 android:layout_height="24dp"
-                android:src="@drawable/ic_info" />
+                android:src="@drawable/ic_alert" />
 
             <TextView
                 android:layout_width="wrap_content"
