--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,4 +18,6 @@
     <color name="deep_blue">#1E3A8A</color>
     <color name="purple_700">#3700B3</color>
     <color name="statusColor">#4CAF50</color>
+    <color name="blue_600">#1565C0</color>
+
 </resources>
