--- a/app/src/main/res/layout/activity_employer_login.xml
+++ b/app/src/main/res/layout/activity_employer_login.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     android:gravity="center"
     android:background="@drawable/login_wallpaper"
-    tools:context=".Staff.Patron.PatronLogin">
+    tools:context=".Employers.EmployerLogin">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
@@ -26,7 +26,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Kuona Trust Patron Login"
+                android:text="Bridge Talent Employer Login"
                 android:id="@+id/txv_stafflogin"
                 android:textSize="25sp"
                 android:textAlignment="center"
