--- a/app/src/main/res/layout/activity_employer_login.xml
+++ b/app/src/main/res/layout/activity_employer_login.xml
@@ -23,6 +23,7 @@
             android:orientation="vertical"
             android:layout_gravity="center_horizontal"
             android:padding="24dp">
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -32,6 +33,7 @@
                 android:textAlignment="center"
                 android:textStyle="bold"
                 android:textColor="@color/colorPrimary"/>
+
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
@@ -44,6 +46,7 @@
                 android:textColor="@color/colorBlack"
                 android:textColorHighlight="@color/cardview_dark_background"
                 android:layout_marginTop="40dp"/>
+
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
@@ -61,7 +64,9 @@
             <ProgressBar
                 android:id="@+id/progressBar"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"/>
+
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
@@ -70,20 +75,34 @@
                 android:textSize="18sp"
                 android:layout_marginTop="30dp"
                 android:backgroundTint="@color/colorPrimary"
-                app:cornerRadius = "20dp"/>
+                app:cornerRadius="20dp"/>
         </LinearLayout>
     </androidx.cardview.widget.CardView>
+
+    <!-- New styled registration prompt -->
     <TextView
-        android:visibility="gone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="8dp"
-        android:text="Not yet registered? SignUp Now"
+        android:text="If you don't have an account, "
         android:textSize="14sp"
+        android:textColor="@color/colorBlack"
+        android:layout_marginTop="20dp"
+        android:textAlignment="center"/>
+
+    <TextView
+        android:id="@+id/txv_register_employer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Register"
+        android:textSize="14sp"
+        android:textStyle="bold"
+        android:textColor="@color/colorPrimary"
+        android:clickable="true"
+        android:focusable="true"
         android:textAlignment="center"
-        android:id="@+id/signupText"
-        android:textColor="@color/white"
         android:layout_marginBottom="20dp"/>
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -93,6 +112,7 @@
         android:textAlignment="center"
         android:textColor="@color/colorBlack"
         android:layout_marginBottom="20dp"/>
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -103,5 +123,4 @@
         android:id="@+id/gotostaff"
         android:textColor="@color/colorBlack"
         android:layout_marginBottom="20dp"/>
-
 </LinearLayout>
