--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -86,6 +86,7 @@
         android:layout_below="@id/rv_articles"
         android:layout_alignParentRight="true"
         android:layout_marginTop="10dp"
+        android:paddingBottom="10dp"
         android:background="@drawable/button_post_job_bg"
         android:paddingLeft="16dp"
         android:paddingRight="16dp"/>
