--- a/app/src/main/res/layout/activity_post_job.xml
+++ b/app/src/main/res/layout/activity_post_job.xml
@@ -156,6 +156,17 @@
             android:layout_marginTop="12dp" />
 
         <EditText
+            android:id="@+id/et_job_location"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/input_bg"
+            android:hint="Job Location"
+            android:padding="14dp"
+            android:textColor="#000"
+            android:textColorHint="#777"
+            android:layout_marginTop="12dp" />
+
+        <EditText
             android:id="@+id/et_deadline"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
