--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -12,6 +12,9 @@
             android:id="@+id/nav_profile"
             android:title="Profile" />
         <item
+            android:id="@+id/nav_my_jobs"
+            android:title="My Jobs" />
+        <item
             android:id="@+id/nav_applied_jobs"
             android:title="My Applications" />
         <item
