--- a/app/src/main/res/layout/activity_my_job_details.xml
+++ b/app/src/main/res/layout/activity_my_job_details.xml
@@ -152,10 +152,20 @@
                 android:layout_height="wrap_content"/>
             <TextView
                 android:id="@+id/tvStatus"
-                android:textColor="#444"
-                android:layout_marginBottom="12dp"
+                android:text="Active"
+                android:textStyle="bold"
+                android:textSize="14sp"
+                android:paddingLeft="12dp"
+                android:paddingRight="12dp"
+                android:paddingTop="6dp"
+                android:paddingBottom="6dp"
+                android:textColor="#FFFFFF"
+                android:background="@drawable/status_badge"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="16dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
+
 
         </LinearLayout>
 
