--- a/app/src/main/res/menu/activity_dashboard_drawer.xml
+++ b/app/src/main/res/menu/activity_dashboard_drawer.xml
@@ -18,6 +18,9 @@
             android:id="@+id/nav_approved_payments"
             android:title="Approved Payments" />
         <item
+            android:id="@+id/nav_new_jobs"
+            android:title="New Jobs" />
+        <item
             android:id="@+id/nav_received_donations"
             android:title="Received Donations" />
         <item
